app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */

@import "bootstrap";

body {
	background-color: #6C757D !important;
}
a {
	text-decoration: none;
	color: #F8F9FA;
}
a:hover {
	color: rgba(255, 255, 255, 0.7);
}
.top-nav {
	position: fixed;
	z-index: 1;
	width: 100%;
}
.container-fluid {
	padding-left: 0 !important;
	padding-right: 0 !important;
}
#main-height {
	height: 100%;
}
.main-background {
	background-image: url("/assets/bus_background.jpg");
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	background-color: #333638;
}
.background {
	min-height: 100vh;
}
.vh-100 {
	height: 100vh;
}
#navcon {
	a {
		&:hover {
			color: #FFF !important;
		}
	}
}
.margin-top {
	margin-top: 80px;
}
.padding-top {
	padding-top: 80px;
}
#alert {
    position: absolute;
	z-index: 2;
    width: auto;
    top: 5%;
    left: 50%;
    padding: 0.75rem 0.75rem;
    transform: translate(-50%, 0);
}
.nav-link {
	padding: 0rem !important;
	color: #6C757D;
	text-decoration: none;
}
.bg-dark-c {
	background-color: rgba(0, 0, 0, 0.7);
}
#close {
	text-decoration: none;
	color: #000;
	opacity: 0.5;
}
#container-signin {
	width: 400px;
	margin-top: 30vh;
}
#container-form {
	width: 350px;
}
#btn-signin {
	width: 80px;
}
.dropdown-menu {
	min-width: 0rem !important;
}
.dropdown-menu[data-bs-popper] {
	margin-top: 0rem !important;
	margin-right: 0.5rem;
}
.w-1000 {
	width: 1000px;
}
.w-500 {
	width: 500px;
}
th, td {
	vertical-align: middle;
	padding: 10px !important;
}
.table {
	border: 2px solid #000;
	border-radius: 10px;
}
input[type="number"] {
    outline: none;
    width:  50px;
    border: 2px solid black;
    border-radius: 4px;
    text-align: center;
}
.card-header {
	border-bottom: 1px solid rgb(200, 200, 200) !important;
}
.card-header:hover {
	background-color: #333638 !important;
}
.card-body {
	background-color: #333638 !important;
}
.btn {
	box-shadow: 0 0 0 0 rgb(0, 0, 0)!important;
}
.tab {
	padding: 12px !important;
}
.tab-left {
	border-radius: 5px 0 0 0 !important;
}
.tab-middle {
	border-radius: 0 !important;
}
.tab-right {
	border-radius: 0 5px 0 0 !important;
}
.nav-tabs {
	border-bottom: 2px solid #F8F9FA;
}
.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
	background-color: #212529;
	color: #F8F9FA;
	border: 1px solid transparent;
}
.nav-tabs .nav-link {
	background-color: #333638;
	color: rgba(255, 255, 255, 0.5);
}
.nav-link:hover, .nav-link:focus {
    color: #F8F9FA;
}
.nav-tabs .nav-link:hover {
	border-color: rgba(255, 255, 255, 0.7) rgba(255, 255, 255, 0.7) transparent;
}
.btn-close:focus {
	box-shadow: none;
}
.my-legend {
	width: 120px;
	height: 150px;
	margin-left: 15px;
}
.my-legend .legend-scale ul {
    margin: 0;
    padding: 0;
}
.my-legend .legend-scale ul li {
	display: flex;
	list-style: none;
    margin-bottom: 2px;
    line-height: 25px;
    font-size: 80%;
}
.my-legend ul.legend-labels li span {
    display: block;
    height: 25px;
    width: 25px;
    margin-right: 5px;
    border: 1px solid rgb(209, 209, 209);
}
/********************************************************************/
.grid-container {
	width: 290px;
	height: 710px;
	display: grid;
	grid-template-columns: repeat(5, 50px);
	grid-template-rows: repeat(12, 50px);
	gap: 10px;
}
input[type="checkbox"]:not(:checked), 
	input[type="checkbox"]:checked {
	position: absolute;
	left: -9999%;
}
input[type="checkbox"] + label {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 50px;
	height: 50px;
	cursor: pointer;
	border: none;
	background-color: #333638;
	color: white;
}
input[type="checkbox"]:checked + label {
	background-color: limegreen;
}
input[type="checkbox"]:disabled + label {
	background-color: red;
}
.one          { grid-area: 1 / 1 / 2 / 2; }
.two          { grid-area: 1 / 2 / 2 / 3; }
.three        { grid-area: 1 / 4 / 2 / 5; }
.four         { grid-area: 1 / 5 / 2 / 6; }
.five         { grid-area: 2 / 1 / 3 / 2; }
.six          { grid-area: 2 / 2 / 3 / 3; }
.seven        { grid-area: 2 / 4 / 3 / 5; }
.eight        { grid-area: 2 / 5 / 3 / 6; }
.nine         { grid-area: 3 / 1 / 4 / 2; }
.ten          { grid-area: 3 / 2 / 4 / 3; }
.eleven       { grid-area: 3 / 4 / 4 / 5; }
.twelve       { grid-area: 3 / 5 / 4 / 6; }
.thirteen     { grid-area: 4 / 1 / 5 / 2; }
.fourteen     { grid-area: 4 / 2 / 5 / 3; }
.fifteen      { grid-area: 4 / 4 / 5 / 5; }
.sixteen      { grid-area: 4 / 5 / 5 / 6; }
.seventeen    { grid-area: 5 / 1 / 6 / 2; }
.eighteen     { grid-area: 5 / 2 / 6 / 3; }
.nineteen     { grid-area: 5 / 4 / 6 / 5; }
.twenty       { grid-area: 5 / 5 / 6 / 6; }
.twenty-one   { grid-area: 6 / 1 / 7 / 2; }
.twenty-two   { grid-area: 6 / 2 / 7 / 3; }
.twenty-three { grid-area: 6 / 4 / 7 / 5; }
.twenty-four  { grid-area: 6 / 5 / 7 / 6; }
.twenty-five  { grid-area: 7 / 1 / 8 / 2; }
.twenty-six   { grid-area: 7 / 2 / 8 / 3; }
.twenty-seven { grid-area: 8 / 1 / 9 / 2; }
.twenty-eight { grid-area: 8 / 2 / 9 / 3; }
.twenty-nine  { grid-area: 8 / 4 / 9 / 5; }
.thirty       { grid-area: 8 / 5 / 9 / 6; }
.thirty-one   { grid-area: 9 / 1 / 10 / 2; }
.thirty-two   { grid-area: 9 / 2 / 10 / 3; }
.thirty-three { grid-area: 9 / 4 / 10 / 5; }
.thirty-four  { grid-area: 9 / 5 / 10 / 6; }
.thirty-five  { grid-area: 10 / 1 / 11 / 2; }
.thirty-six   { grid-area: 10 / 2 / 11 / 3; }
.thirty-seven { grid-area: 10 / 4 / 11 / 5; }
.thirty-eight { grid-area: 10 / 5 / 11 / 6; }
.thirty-nine  { grid-area: 11 / 1 / 12 / 2; }
.forty        { grid-area: 11 / 2 / 12 / 3; }
.forty-one    { grid-area: 11 / 4 / 12 / 5; }
.forty-two    { grid-area: 11 / 5 / 12 / 6; }
.forty-three  { grid-area: 12 / 1 / 13 / 2; }
.forty-four   { grid-area: 12 / 2 / 13 / 3; }
.forty-five   { grid-area: 12 / 3 / 13 / 4; }
.forty-six    { grid-area: 12 / 4 / 13 / 5; }
.forty-seven  { grid-area: 12 / 5 / 13 / 6; }

